# BMSTU

./: .gitignore  5(n-ное число Фибоначчи).go  README.md  test
Compilers(6 семестр)/: readme.md
Compilers(6 семестр)/1/: btpc64-2.pas  btpc64-3.pas  hello.pas  readme.md  report.md
Compilers(6 семестр)/2/: example.go  prog1  prog1.go  readme.md  report.md
Compilers(6 семестр)/2.2/: 2.txt  3.3.py  debug.txt  example_lab.py  grammar.txt  lab22.py  lab221.py  test copy.txt  test.txt
Compilers(6 семестр)/2.3/: 1.txt  go.mod  gramarToken.txt  main.go  main1.go  out.txt
Compilers(6 семестр)/2.4/: 1.txt  2.txt  go.mod  main.go
Compilers(6 семестр)/3/: 1.txt  go.mod  main.go
Compilers(6 семестр)/3.1/: gram_trans.txt
Compilers(6 семестр)/3.2/: input.pas  lexer.l  lexernew.l  parser.y  parsernew.y  run.sh
Compilers(6 семестр)/3.3/: grammar.txt  grammarpython.txt  lab33bad.py  parser_edsl.py  test copy 2.txt  test.py  test.txt
Compilers(6 семестр)/4/: CMakeLists.txt  main.cpp
GOK/: gener
GOK/lab4/: CMakeLists.txt  graph.txt  main.cpp  program.txt
GOK/lab4/ControlFlowGraph/: BasicBlock.cpp  BasicBlock.hpp  ControlFlowGraph.cpp  ControlFlowGraph.hpp  IRStatements.cpp  IRStatements.hpp
GOK/lab4/IRGeneration/: AbstractVisitor.hpp  IRGenerator.cpp  IRGenerator.hpp
GOK/lab4/Lexer/: Lexer.cpp  Lexer.hpp  Token.hpp
GOK/lab4/Parser/: Expressions.cpp  Expressions.hpp  Parser.cpp  Parser.hpp
go(2 семестр)/: 1.go  2  2.go  3  4  5  5.go  6  6.go  7.go  8
low_level_programming(2 семестр)/: lab_0.asm
low_level_programming(3 семестр)/: lab_1.ASM  lab_2.asm
(+189 files in other folders)
